# Elo

./: .gitignore  README.md  pyproject.toml  setup.py
elosports/: elo-other.py  elo.py
src/elosports/: elo.py  elo.pyi  elo_other.py
test/: conftest.py  test_elo.py
tutorial/: elo_simulations.py
