[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "elosports"
version = "1.0"
authors = [{ name = "Daniel Mooney" }]
maintainers = [{ name = "Andrea Pachera" }]
description = "Python implementation of the Elo rating system"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"elosports" = ["py.typed"]

[project.urls]
"Homepage" = "https://github.com/Manitary/Elo"
